[package]
name = "bkpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
nix = { version = "0.28.0", features = ["process", "ptrace"] }
rustyline = "13.0.0"
